--- a/fuintBackend/fuint-application/src/main/resources/application.properties
+++ b/fuintBackend/fuint-application/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # \u57FA\u672C\u914D\u7F6E
-server.port=8082
+server.port=9090
 env.profile=dev
-env.properties.path=/home/bikeread/projects/market/fuintBackend/configure/
+env.properties.path=D:/projects/market_platform/fuintBackend/configure
 
 # \u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
