--- a/fuintAdmin/.env.development
+++ b/fuintAdmin/.env.development
@@ -1,5 +1,5 @@
 # 页面标题
-VUE_APP_TITLE = fuint汽车会员系统
+VUE_APP_TITLE = 汽车会员系统
 
 # 开发环境配置
 ENV = 'development'
@@ -11,4 +11,4 @@ VUE_APP_BASE_API = '/dev-api'
 VUE_APP_PUBLIC_PATH = '/'
 
 # 后端接口地址
-VUE_APP_SERVER_URL = 'http://localhost:8082/'
+VUE_APP_SERVER_URL = 'http://localhost:9090/'
