--- a/fuintBackend/configure/dev/application.properties
+++ b/fuintBackend/configure/dev/application.properties
@@ -1,112 +1,113 @@
-# 数据库配置
+# \u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.url=jdbc:mysql://localhost:3306/fuint-car?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
-# Redis配置
+# Redis\u914D\u7F6E
 spring.session.store-type=redis
 spring.session.redis.namespace=fuint
-# Redis数据库索引（默认为0）
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0 
-# Redis服务器地址(生产)
+# Redis\u670D\u52A1\u5668\u5730\u5740(\u751F\u4EA7)
 spring.redis.host=127.0.0.1
-# Redis服务器连接端口
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
 spring.redis.password=fuint123
-# 连接池最大连接数（使用负值表示没有限制）
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.pool.max-active=-1
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.pool.max-wait=-1 
-# 连接池中的最大空闲连接
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.pool.max-idle=8 
-# 连接池中的最小空闲连接
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.pool.min-idle=0 
-# 连接超时时间（毫秒）
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 spring.redis.timeout=0
 
-# 系统名称
-system.name = fuint汽车会员系统
+# \u7CFB\u7EDF\u540D\u79F0
+system.name = fuint\u6C7D\u8F66\u4F1A\u5458\u7CFB\u7EDF
 
-# 前端h5地址
+# \u524D\u7AEFh5\u5730\u5740
 website.url=https://www.fuint.cn/h5/
 
-# 上传图片本地地址
-images.root=/home/bikeread/projects/market/fuintBackend/fuint-application/target/classes
+# \u4E0A\u4F20\u56FE\u7247\u672C\u5730\u5730\u5740
+# Windows/WSL\u73AF\u5883\u4F7F\u7528\u4E0B\u9762\u7684\u8DEF\u5F84
+images.root=D:/projects/market_platform/fuintBackend/fuint-application/target/classes
 images.path=/static/uploadImages/
 
-# 上传图片服务器域名
-images.upload.url=http://localhost:8080
+# \u4E0A\u4F20\u56FE\u7247\u670D\u52A1\u5668\u57DF\u540D
+images.upload.url=https://3cj8941853.oicp.vip
 
-# 上传图片允许的大小（单位：MB）
+# \u4E0A\u4F20\u56FE\u7247\u5141\u8BB8\u7684\u5927\u5C0F\uFF08\u5355\u4F4D\uFF1AMB\uFF09
 images.upload.maxSize=5
 
-################## 定时脚本配置 #########################
-# 定时发送消息
+################## \u5B9A\u65F6\u811A\u672C\u914D\u7F6E #########################
+# \u5B9A\u65F6\u53D1\u9001\u6D88\u606F
 message.job.switch = 1
 message.job.time = 0 0/1 * * * ?
 
-# 卡券到期处理
+# \u5361\u5238\u5230\u671F\u5904\u7406
 couponExpire.job.switch = 1
 couponExpire.job.time = 0 0/1 * * * ?
 
-# 订单超时取消
+# \u8BA2\u5355\u8D85\u65F6\u53D6\u6D88
 orderCancel.job.switch = 1
 orderCancel.job.time = 0 0/1 * * * ?
 
-# 分佣提成计算
+# \u5206\u4F63\u63D0\u6210\u8BA1\u7B97
 commission.job.switch = 1
 commission.job.time = 0 0/1 * * * ?
 
-# 小程序上传发货信息
+# \u5C0F\u7A0B\u5E8F\u4E0A\u4F20\u53D1\u8D27\u4FE1\u606F
 uploadShippingInfoJob.job.switch = 1
 uploadShippingInfoJob.job.time = 0 0/1 * * * ?
 
-################## 阿里云短信配置 #######################
-# 短信接口模式[0-关闭 1-打开]
+################## \u963F\u91CC\u4E91\u77ED\u4FE1\u914D\u7F6E #######################
+# \u77ED\u4FE1\u63A5\u53E3\u6A21\u5F0F[0-\u5173\u95ED 1-\u6253\u5F00]
 aliyun.sms.mode = 0
 aliyun.sms.accessKeyId=LTAI4GJMjV123oXsrQJLnPZt
 aliyun.sms.accessKeySecret=eGVBL30u5Ypj234d7XODlwYKWTaGT
-# 阿里云短信签名
-aliyun.sms.signName=延禾技术
+# \u963F\u91CC\u4E91\u77ED\u4FE1\u7B7E\u540D
+aliyun.sms.signName=\u5EF6\u79BE\u6280\u672F
 
-################## 阿里云OSS存储配置######################
-# 模式[0-关闭 1-打开]
+################## \u963F\u91CC\u4E91OSS\u5B58\u50A8\u914D\u7F6E######################
+# \u6A21\u5F0F[0-\u5173\u95ED 1-\u6253\u5F00]
 aliyun.oss.mode = 0
 aliyun.oss.accessKeyId = LTAI4GJMjVhBa212rQJLnPZtt
 aliyun.oss.accessKeySecret = eGVBL30u53456gXd7XODlwYKWTaGT
 aliyun.oss.endpoint = https://oss-cn-shenzhen.aliyuncs.com
 aliyun.oss.bucketName = fuint-application
-# 上传文件夹
+# \u4E0A\u4F20\u6587\u4EF6\u5939
 aliyun.oss.folder = uploads
-# 访问域名
+# \u8BBF\u95EE\u57DF\u540D
 aliyun.oss.domain = https://fuint-application.oss-cn-shenzhen.aliyuncs.com
 
-################## 微信相关配置 ##########################
-# 公众号配置
+################## \u5FAE\u4FE1\u76F8\u5173\u914D\u7F6E ##########################
+# \u516C\u4F17\u53F7\u914D\u7F6E
 weixin.official.appId=wxf4327ef05c27a0
 weixin.official.appSecret=1f55e8749332234d9a074873d8e6a3
 
-# 小程序配置
-wxpay.appId=wxb6af3741686162bc
-wxpay.appSecret=76a538bfa5b55a72de6214d5f0be5540
+# \u5C0F\u7A0B\u5E8F\u914D\u7F6E
+wxpay.appId=wx544d007a1e8ba385
+wxpay.appSecret=3187314005427a8ba0091cb6b159588a
 wxpay.mchId=1636980848
 wxpay.apiV2=fuyuan20201030yanhe9999999999999
 wxpay.certPath=/usr/local/fuint/cert/apiclient_cert.p12
 wxpay.domain=https://www.fuint.cn/fuint-application
 
-################## 支付宝支付相关配置 ######################
-alipay.appId = 应用编号
-alipay.privateKey = 应用私钥
-alipay.publicKey = 支付宝公钥（通过应用公钥上传到支付宝开放平台换取支付宝公钥）
+################## \u652F\u4ED8\u5B9D\u652F\u4ED8\u76F8\u5173\u914D\u7F6E ######################
+alipay.appId = \u5E94\u7528\u7F16\u53F7
+alipay.privateKey = \u5E94\u7528\u79C1\u94A5
+alipay.publicKey = \u652F\u4ED8\u5B9D\u516C\u94A5\uFF08\u901A\u8FC7\u5E94\u7528\u516C\u94A5\u4E0A\u4F20\u5230\u652F\u4ED8\u5B9D\u5F00\u653E\u5E73\u53F0\u6362\u53D6\u652F\u4ED8\u5B9D\u516C\u94A5\uFF09
 alipay.serverUrl=https://openapi.alipay.com/gateway.do
 alipay.domain=https://www.fuint.cn/fuint-application/clientApi/pay/aliPayCallback
 
-################ 微信订阅模板消息配置 ######################
-weixin.subMessage.orderCreated=[{'key':'time', 'name':'订单时间'},{'key':'orderSn', 'name':'订单号'},{'key':'remark', 'name':'备注信息'}]
-weixin.subMessage.deliverGoods=[{'key':'receiver', 'name':'收货人'}, {'key':'orderSn', 'name':'订单号'}, {'key':'expressCompany', 'name':'快递公司'}, {'key':'expressNo', 'name':'快递单号'}]
-weixin.subMessage.couponExpire=[{'key':'name', 'name':'卡券名称'}, {'key':'expireTime', 'name':'到期时间'},{'key':'tips', 'name':'温馨提示'}]
-weixin.subMessage.couponArrival=[{'key':'name', 'name':'卡券名称'},{'key':'amount', 'name':'金额'},{'key':'tips', 'name':'温馨提示'}]
-weixin.subMessage.balanceChange=[{'key':'amount', 'name':'变动金额'},{'key':'time', 'name':'变动时间'},{'key':'tips', 'name':'温馨提示'}]
-weixin.subMessage.couponConfirm=[{'key':'name', 'name':'卡券名称'},{'key':'time', 'name':'核销时间'}]
-weixin.subMessage.pointChange=[{'key':'amount', 'name':'变动数量'},{'key':'time', 'name':'变动时间'},{'key':'remark', 'name':'备注信息'}]
+################ \u5FAE\u4FE1\u8BA2\u9605\u6A21\u677F\u6D88\u606F\u914D\u7F6E ######################
+weixin.subMessage.orderCreated=[{'key':'time', 'name':'\u8BA2\u5355\u65F6\u95F4'},{'key':'orderSn', 'name':'\u8BA2\u5355\u53F7'},{'key':'remark', 'name':'\u5907\u6CE8\u4FE1\u606F'}]
+weixin.subMessage.deliverGoods=[{'key':'receiver', 'name':'\u6536\u8D27\u4EBA'}, {'key':'orderSn', 'name':'\u8BA2\u5355\u53F7'}, {'key':'expressCompany', 'name':'\u5FEB\u9012\u516C\u53F8'}, {'key':'expressNo', 'name':'\u5FEB\u9012\u5355\u53F7'}]
+weixin.subMessage.couponExpire=[{'key':'name', 'name':'\u5361\u5238\u540D\u79F0'}, {'key':'expireTime', 'name':'\u5230\u671F\u65F6\u95F4'},{'key':'tips', 'name':'\u6E29\u99A8\u63D0\u793A'}]
+weixin.subMessage.couponArrival=[{'key':'name', 'name':'\u5361\u5238\u540D\u79F0'},{'key':'amount', 'name':'\u91D1\u989D'},{'key':'tips', 'name':'\u6E29\u99A8\u63D0\u793A'}]
+weixin.subMessage.balanceChange=[{'key':'amount', 'name':'\u53D8\u52A8\u91D1\u989D'},{'key':'time', 'name':'\u53D8\u52A8\u65F6\u95F4'},{'key':'tips', 'name':'\u6E29\u99A8\u63D0\u793A'}]
+weixin.subMessage.couponConfirm=[{'key':'name', 'name':'\u5361\u5238\u540D\u79F0'},{'key':'time', 'name':'\u6838\u9500\u65F6\u95F4'}]
+weixin.subMessage.pointChange=[{'key':'amount', 'name':'\u53D8\u52A8\u6570\u91CF'},{'key':'time', 'name':'\u53D8\u52A8\u65F6\u95F4'},{'key':'remark', 'name':'\u5907\u6CE8\u4FE1\u606F'}]
